[package]
name = "rust-commit2-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-std = "1.12.0"
chrono = { version = "0.4.24", default_features = false, features = [
    "clock",
    "std",
    "time",
] }
clap = { version = "4.1.11", features = ["env", "derive"] }
colorful = "0.2.2"
home = "0.5.4"

log = { version = "0.4.17", features = ["std"] }
once_cell = "1.17.1"
