[workspace]
members = ["fil-proofs-param"]

[package]
name = "rust-commit2-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fil-proofs-param = { path = "fil-proofs-param" }
anyhow = { version = "1.0.70", features = ["backtrace"] }
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = { version = "0.4.24", default_features = false, features = [
    "clock",
    "std",
    "time",
] }
clap = { version = "4.1.11", features = ["env", "derive"] }
futures = "0.3.27"
home = "0.5.4"

log = { version = "0.4.17", features = ["std"] }
once_cell = "1.17.1"
parse-size = "1.0.0"
serde = "1.0.158"
serde_json = "1.0.94"
termcolor = "1.2.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
humansize = "2.1.3"
fil_logger = "0.1.6"
async-trait = "0.1.68"
version = "3.0.0"
axum = "0.6.12"
fvm_shared = "3.1.0"
axum-client-ip = "0.4.0"
time = "0.3.20"
thiserror = "1.0.40"
filecoin-proofs = { version = "14.0.0", features = [] }
hyper = "0.14.26"
serde_bytes = "0.11.9"
base64 = "0.21.2"
filecoin-proofs-api = { version = "14.0.0", default-features = false, features = [
] }

[features]
default = ["opencl"]
opencl = [
    "filecoin-proofs/opencl",
    "fil-proofs-param/opencl",
    "filecoin-proofs-api/opencl",
]
cuda = [
    "filecoin-proofs/cuda",
    "fil-proofs-param/cuda",
    "filecoin-proofs-api/cuda",
]
