[workspace]
members = ["fil-proofs-param"]

[package]
name = "rust-commit2-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fil-proofs-param = { path = "fil-proofs-param" }
anyhow = { version = "1.0.70", features = ["backtrace"] }
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = { version = "0.4.24", default_features = false, features = [
    "clock",
    "std",
    "time",
] }
clap = { version = "4.1.11", features = ["env", "derive"] }
futures = "0.3.27"
home = "0.5.4"

log = { version = "0.4.17", features = ["std"] }
once_cell = "1.17.1"
parse-size = "1.0.0"
serde = "1.0.158"
serde_json = "1.0.94"
termcolor = "1.2.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
humansize = "2.1.3"
fil_logger = "0.1.6"
async-trait = "0.1.68"
version = "3.0.0"
axum = { version = "0.6.12", features = ["ws"] }
fvm_shared = "3.1.0"
axum-client-ip = "0.4.0"
time = "0.3.20"
thiserror = "1.0.40"
filecoin-proofs = { version = "14.0.0", features = [] }
hyper = "0.14.26"
serde_bytes = "0.11.9"
base64 = "0.21.2"
filecoin-proofs-api = { version = "14.0.0", default-features = false, features = [
] }
http = "0.2.9"
jsonrpc-v2 = { version = "0.11", default-features = false, features = [
    "easy-errors",
    "macros",
    "bytes-v05",
] }
ahash = "0.8.3"
serde_with = { version = "3.0.0", features = ["chrono"] }
semver = "1.0.17"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
crossbeam = "0.8.2"
argon2 = "0.5.0"
xsalsa20poly1305 = "0.9.1"
serde_ipld_dagcbor = "0.3.0"
libc = "0.2.146"
dialoguer = "0.10.4"
# jsonrpc_client = "0.7.1"
jsonrpc-core-client = { version = "18.0.0", features = ["http"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
rocksdb = "0.21.0"
serde_cbor = "0.11.2"
ciborium = "0.2.1"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
libp2p = "0.52.1"

[features]
default = ["opencl"]
opencl = [
    "filecoin-proofs/opencl",
    "fil-proofs-param/opencl",
    "filecoin-proofs-api/opencl",
]
cuda = [
    "filecoin-proofs/cuda",
    "fil-proofs-param/cuda",
    "filecoin-proofs-api/cuda",
]

[patch.crates-io]
filecoin-proofs = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "sn-c2" }
storage-proofs-core = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "sn-c2" }
storage-proofs-porep = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "sn-c2" }
storage-proofs-post = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "sn-c2" }
storage-proofs-update = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "sn-c2" }
fr32 = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "sn-c2" }
filecoin-proofs-api = { git = "https://github.com/filecoin-project/rust-filecoin-proofs-api", branch = "sn-c2" }
bellperson = { git = "https://github.com/filecoin-project/bellperson.git", branch = "sn-c2" }