[package]
name = "fil-proofs-param"
description = "Filecoin parameter cli tools."
version = "9.0.0"
authors = [
    "dignifiedquire <dignifiedquire@gmail.com>",
    "laser <l@s3r.com>",
    "porcuquine <porcuquine@users.noreply.github.com>",
]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { version = "~14.0.0", default-features = false }
storage-proofs-porep = { version = "~14.0.0", default-features = false }
storage-proofs-post = { version = "~14.0.0", default-features = false }
storage-proofs-update = { version = "~14.0.0", default-features = false }
filecoin-proofs = { version = "~14.0.0", default-features = false }
rand = "0.8"
lazy_static = "1.2"
itertools = "0.10.3"
serde_json = "1.0"
blake2b_simd = "1.0.0"
log = "0.4.7"
anyhow = "1.0.23"
gperftools = { version = "0.2", optional = true }
humansize = "1.1.0"
backoff = { version = "0.4.0", features = ["tokio"] }
futures = "0.3.27"
hyper = { version = "0.14", features = ["client", "stream", "http1"] }
hyper-rustls = "0.23"
tokio-util = { version = "0.7.7", features = ["compat"] }
tokio = { version = "1.26.0", features = ["fs", "io-util"] }

[dev-dependencies]
rexpect = "0.4.0"
failure = "0.1.7"
tempfile = "3"

[features]
default = ["opencl"]
cpu-profile = ["gperftools"]
heap-profile = ["gperftools/heap"]
simd = ["storage-proofs-core/simd"]
asm = ["storage-proofs-core/asm"]
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "storage-proofs-update/cuda",
]
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "storage-proofs-post/opencl",
    "storage-proofs-update/opencl",
]
